- Catch SIGHUP to perform cleanup before exiting. - Exit if getch() returns with an error other than EINTR. Otherwise   systat(1) may get stuck in an infinite loop if it doesn't receive   SIGHUP when terminal closes. [1] - Remove attempt to clear stdio error indicators. getch() doesn't use   stdio, making it useless. [2] - Remove unneeded masking of getch() return value. [2]

PR:		bin/107171
Reviewed by:	bde
Approved by:	trasz (mentor)
Obtained from:	OpenBSD [1]
Suggested by:	bde [2]
MFC after:	1 month

Former-commit-id: fe8c7e466932922a39b7401869e7681d7ffb9e8d